tests/e2e/semantics/null_op.error
Error: syntax error in story at line 4, column 5

4|    c = a * b
          ^^^^^

E0103: `*` between `any` and `any` is not supported.
