tests/e2e/semantics/null_op.story
a = null
b = null
s = ""
c = a * b
d = b * a
e = a + b
f = s + b
g = a + s
h = [a, b]
a = 1
b = 2
